# rocketsim-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  generate_consts.py  stuff.rs
.github/workflows/: build-and-test.yaml
arenar/: arenar.cpp  arenar.h
collision_meshes/soccar/: mesh_0.cmf.gpg  mesh_1.cmf.gpg  mesh_10.cmf.gpg  mesh_11.cmf.gpg  mesh_12.cmf.gpg  mesh_13.cmf.gpg  mesh_14.cmf.gpg  mesh_15.cmf.gpg  mesh_2.cmf.gpg  mesh_3.cmf.gpg  mesh_4.cmf.gpg  mesh_5.cmf.gpg  mesh_6.cmf.gpg  mesh_7.cmf.gpg  mesh_8.cmf.gpg  mesh_9.cmf.gpg
examples/: ball_bench.rs  basic.rs  basic_loop.rs  cpu_bench.rs  dump_ball.rs  init_from_bin.rs  real_bench.rs  rlviser_socket.rs  rlviser_stress.rs  specific.rs  stat_tracker.rs  thread_bench.rs
extra_cpp/: extra.cpp  extra.h
src/: bytes.rs  consts.rs  ext.rs  glam_ext.rs  lib.rs  math.rs  render.rs  rlbot.rs  serde_utils.rs
src/sim/: arena.rs  arena_config.rs  ball_hit_info.rs  ball_state.rs  boost_pad.rs  boost_pad_state.rs  car_config.rs  car_controls.rs  car_state.rs  dropshot_tiles.rs  mod.rs  mutator_config.rs
tests/: tests.rs  unit.rs
