[package]
name = "rocketsim_rs"
description = "Rust bindings for the RocketSim project"
version = "0.24.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/VirxEC/rocketsim-rs"
exclude = [".git*", "CMake*", "collision_meshes", "rustfmt.toml", "*.py", "python"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autocxx = "0.26.0"
cxx = { version = "1.0.83", features = ["c++20"] }
glam = { version = "0.25.0", optional = true }
serde = { version = "1.0.195", optional = true, features = ["derive"] }

[build-dependencies]
glob = "0.3.0"
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] }
cc = { version = "1.0.83", features = ["parallel"] }

[profile.release]
lto = true

[features]
default = ["debug_logging", "bin"]
debug_logging = []
glam = ["dep:glam"]
bin = []
serde_utils = ["serde"]

[target.'cfg(not(any(target_arch = "x86", target_arch = "x86_64")))'.dependencies]
# use glam with experimental support for portable SIMD when not running on x86
# architectures
glam = { version = "0.25.0", optional = true, features = ["core-simd"] }

[dev-dependencies]
byteorder = "1.4.3"
ctrlc = "3.3.1"
rand = "0.8.5"
serde_json = "1.0.111"

[[example]]
name = "rlviser_socket"
required-features = ["bin"]
